# fislator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: csv1.py
include/: exceptions.hpp  fislater.hpp  fislator.hpp
reference/: invalid.json
tools/: CMakeLists.txt
tools/translate/: CMakeLists.txt  main.cpp
